tests/ui/once_ty_rejected.stderr
error: `ty` is not supported on `#[once]`; `#[once]` manages its own single-value storage and does not take a custom store type
 --> tests/ui/once_ty_rejected.rs:4:4
  |
4 | fn f() -> i32 {
  |    ^
